[tool.poetry]
name = "project-streamlit"
version = "0.1.0"
description = ""
authors = ["leandrobi <leandroalves2w@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
